--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
 		<script src="js/index.js" ></script>
 		<script src="js/navMenu.js" ></script>
 		<script src="js/topBbq.js" ></script>
+		<style>
+			@font-face {
+				font-family: 'Esamanru7Bold';
+				src: url(font/esamanru-Bold.ttf);
+				font-weight: 700;
+				font-style: normal;
+			}
+			
+			@font-face {
+				font-family: 'Esamanru4Medium';
+				src: url(font/esamanru-Medium.ttf);
+				font-weight: 400;
+				font-style: normal;
+			}
+			
+			@font-face {
+				font-family: 'Esamanru3Regular';
+				src: url(font/esamanru-Light.ttf);
+				font-weight: 300;
+				font-style: normal;
+			}
+			
+
+		</style>
 	</head>
 	<body>
 		<div id="wrapper">
@@ -232,14 +256,7 @@
 					<div id="playText">
 						<h3 class="enjoyText"><img src="images/playText.png" alt="다양한 즐길 거리"></h3>
 					</div>
-					<div id="sb">
-						<ul class="slideBt">
-							<li><img src="images/slideBotton.png" alt=""></li>
-							<li><img src="images/slideBotton_gray.png" alt=""></li>
-							<li><img src="images/slideBotton_gray.png" alt=""></li>
-							<li><img src="images/slideBotton_gray.png" alt=""></li>
-						</ul>
-					</div>
+					
 					<div id="parent2">
 						<div id="playSlide">
 							<ul> <!-- 1200 * 569 -->
